Finalized the energy integration and rankine cycle of the process.

--- a/energy_integration.org
+++ b/energy_integration.org
@@ -237,7 +237,7 @@
 *** Αντιδραστήρας παραγωγής γλυκερόλης
 Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς). Ακόμη όμως και να γινόταν, η απαίτηση σε ψύξη είναι υψηλή (12901.5 MJ/hr) και με την υπάρχουσα διεργασία και ολοκλήρωση, δεν περισσεύει πουθενά τόση ψυχρή παροχή.
 *** Αποστακτική στήλη γλυκερόλης
-Ο συμπηκνωτήρας της στήλης λειτουργεί στους 145 \( ^oC \) (140 \( ^oC \) στο ΜΣΓ). Στο σημείο αυτό είναι η μεγάλη ενεργειακή τσέπη του ΜΣΓ, άρα η ολοκλήρωση είναι αρκετά εύκολη. Επίσης, η απαίτηση σε ψύξη είναι σχετικά μικρή (149.49 MJ/hr) άρα η στήλη θα μπορούσε να ολοκληρωθεί εκεί. Ο αναβραστήρας λειτουργεί στην υψηλότερη θερμοκρασία που υπάρχει στην διεργασία, και καθώς ο αναβραστήρας θεωρείται "ψυχρό ρεύμα", στο ΜΣΓ θα τοποθετηθεί στους 293 \( ^oC \). Άρα, απαιτείται μία θερμή βοηθητική παροχή στους 300 \( ^oC \) τουλάχιστον με θερμότητα 1105.44 MJ/hr. Αλλά και να υπήρχε διαθέσιμο θερμό ρεύμα, δεν είναι γενικά μία καλή πρακτική να ολοκληρώσουμε και τις δύο πλευρές τις αποστακτικής καθώς κάνει τον έλεγχο της στήλης πιο δύσκολο.
+Ο αναβραστήρας της στήλης λειτουργεί στους 293 \( ^oC \) στο ΜΣΓ και έχει απαίτηση θερμότητας στους 1105.44 MJ/hr. Αυτό υπερβαίνει τις θερμοκρασίες καθώς και τις ενθαλπίες που υπάρχουν στο διάγραμμα. Άρα, η ολοκλήρωση όλης της στήλης με το υπόλοιπο διάγραμμα ροής είναι ανέφικτη. Όμως, ο συμπηκνωτήρας της στήλης λειτουργεί στους 145 \( ^oC \) (140 \( ^oC \) στο ΜΣΓ). Στο σημείο αυτό είναι η μεγάλη ενεργειακή τσέπη του ΜΣΓ, άρα η ολοκλήρωση είναι αρκετά εύκολη. Επίσης, η απαίτηση σε ψύξη είναι σχετικά μικρή (149.49 MJ/hr) άρα ο συμπηκνωτήρας αυτός θα μπορούσε να ολοκληρωθεί ως εναλλάκτης αλλά όχι ως ολόκληρη αποστακτική.
 *** Αντιδραστήρας παραγωγής φουρφουράλης
 Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν. Επίσης, η απαίτηση του σε ψύξη είναι αρκετά χαμηλή (13.35 MJ/hr) άρα είναι αρκετά εύκολο να χωρέσει.
 *** Αντιδραστήρας παραγωγής κυκλοπεντανόνης
@@ -247,14 +247,57 @@
 *** Αντιδραστήρας σακχαροποίησης
 Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι ενδόθερμος. Είναι πάνω από τον κόμβο ανάσχεσης, αλλά μέσα σε μία σχετικά μεγάλη ενεργειακή τσέπη. Στο σημείο αυτό της τσέπης υπάρχει διαθέσιμη περίπου 1000 MJ/hr θερμών παροχών και η απαίτηση του αντιδραστήρα είναι (393.63 MJ/hr) άρα η ολοκλήρωση θεωρείται εφικτή.
 
+*** Αλλαγές στο ΜΣΓ
+Για την αποστακτική της γλυκερόλης, αναφέρθηκε πως μπορεί να ολοκληρωθεί ως εναλλάκτης ο συμπυκνωτήρας χωρίς να ολοκληρώσουμε όλη την στήλη λόγω ανεπάρκειας ενέργειας. Άρα, στους 140 \( ^oC \) μπορούμε να πούμε πως υπάρχει ένα επιπλέον θερμό ρεύμα το οποίο έχει ενθαλπία 149.49 MJ/hr. Άρα, μπορεί η περιοχή από τους 145 μέχρι τους 139.4 να μειώσει την ενθαλπία της κατά αυτόν τον αριθμό. Η ολοκλήρωση αυτή μετακινεί τον κόμβο ανάσχεσης αρκετά πιο ψηλά στο ΜΣΓ (227 \( ^oC \)) και κάνει τον παλιό κόμβο ανάσχεσης να είναι στα 11 περίπου MJ/hr αντί για 0. Η ολοκλήρωση του αντιδραστήρα οδηγεί σε απαίτηση σε θερμή παροχή η οποία είναι περίπου το 0.6 της αρχικής και σε ελάχιστη αύξηση της απαίτησης σε ψυχρή παροχή, άρα είναι όντως ένα επιθυμητό σενάριο ολοκλήρωσης.
+
+Ομοίως, ο αντιδραστήρας της φουρφουράλης είναι ένας εξώθερμος αντιδραστήρας που μπορεί να λειτουργήσει ως επιπλέον θερμό ρεύμα για την διεργασία με θερμότητα 13.35 MJ/hr στους 237 (θα προστεθεί στο interval 237->227). Αν προσθέσουμε και το ρεύμα αυτό στην προηγούμενη ολοκλήρωση, παρατηρούμε μία μικρή μείωση της απαίτησης σε θερμή παροχή (213.2->199.8) καθώς και μικρή αύξηση της ενεργειακής τσέπης πάνω από τον κόμβο ανάσχεσης. Άρα, έχει θετική επίδραση παρότι αρκετά μικρότερη από την παραπάνω.
+
+Τέλος, ο τρίτος αντιδραστήρας που αναφέρθηκε ότι μπορεί να ολοκληρωθεί είναι ο αντιδραστήρας της σακχαροποίησης της κυτταρίνης ο οποίος όμως είναι ενδόθερμος, άρα λειτουργεί ως ένα ψυχρό ρεύμα στους 55 \( ^oC \) το οποίο προσθέτει 393.63 MJ/hr στο interval 56.97->54.75. Η ολοκλήρωση αυτή οδηγεί σε μία αρκετά μικρή μείωση της ψυχρής παροχής αλλά επίσης προκαλεί σχεδόν τριπλασιασμό της απαίτησης σε θερμή παροχή. Συμπέρασμα πως δεν αξίζει να γίνει μία τέτοια ολοκλήρωση όπως και οι υπόλοιπες ολοκληρώσεις του ΜΣΓ.
+
+Παρακάτω παρατίθεται και το ΜΣΓ στο οποίο έχουν γίνει οι δύο αυτές προσθήκες.
+#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
+#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative  Dh |     T |
+|----------------+-------|
+|        199.815 | 283.9 |
+|        328.481 |   248 |
+|        317.341 |   238 |
+|          326.4 |   237 |
+|              0 |   227 |
+|       2561.976 |   155 |
+|       3002.576 |   145 |
+|       3075.419 | 139.4 |
+|       3018.452 |   135 |
+|       2921.582 |   125 |
+|       2131.552 | 85.65 |
+|       1870.202 | 75.65 |
+|       1848.523 |  74.9 |
+|       1517.543 |  64.9 |
+|       1216.330 | 56.97 |
+|       1140.475 | 54.75 |
+|        281.831 |    45 |
+|         10.921 |    35 |
+|        317.481 |    25 |
+
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα μετά την ολοκλήρωση 2 διεργασιών
+#+ATTR_ORG: :width 700px
+[[file:Diagrams/grand_composite_curve_4.png]]
+
+Βέβαια, παρότι το μεγάλο σύνθετο γράφημα αυτό είναι μία πολύ καλή εικόνα (χαμηλές απαιτήσεις και σε θερμή αλλά και σε ψυχρή παροχή), έχει δημιουργηθεί μία πάρα πολύ μεγάλη ενεργειακή τσέπη. Παρόλο που θα μπορούσαμε να την αφήσουμε, αξίζει να εξεταστεί και το ενδεχόμενο της ολοκλήρωσης ενός μικρού κύκλου Rankine στο σημείο αυτό το οποίο θα παράγει υπέρθερμο ατμό με ένα ποσό της διαθέσιμης θερμότητας της τσέπης, θα τον εκτονώνει σε στρόβιλο παράγοντας ηλεκτρική ενέργεια και με τον ατμό χαμηλότερης πίεσης θα εναλάσσει με τα κάτω ρεύματα της τσέπης.
+
+Λόγω της μορφής του γραφήματος, η επιλογή των επιπέδων ατμού που θα μεγιστοποιήσουν την ηλεκτροπαραγωγή είναι γενικά ένα θέμα βελτιστοποίησης. Αυτό συμβαίνει επειδή αν εκμεταλλευτούμε πολύ από την διαθέσιμη θερμότητα, δηλαδή παράξουμε μεγάλη ποσότητα ατμού, η μείωση της θερμοκρασίας του ατμού που θα μπορούμε να κάνουμε θα είναι μικρή μέχρι να συναντήσουμε το άλλο άκρο της τσέπης. Αντίθετα, αν παράξουμε μικρή ποσότητα ατμού, θα έχει μεγάλο περιθώριο εκτόνωσης.
+
 ** Απαίτηση σε θερμές παροχές
-Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των συμπιεστών, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 συμπιεστές στο κύκλο, άρα πάνω από 3 επίπεδα ατμού. Το χαμηλότερο επίπεδο χρησιμοποιείται για την αναγέννηση στο κύκλο και αύξηση της απόδοσης μετατροπής σε ηλεκτρισμό. Άρα, στην πράξη, μπορούμε να έχουμε 2 επίπεδα ατμού, και αρκεί να βρούμε ποιά θα είναι αυτά.
+Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των συμπιεστών, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 συμπιεστές στο κύκλο, άρα πάνω από 4 επίπεδα ατμού.
 
 #+CAPTION: Απαιτούμενα επίπεδα ατμού
 | Απαίτηση                     | Θερμότητα (MJ/hr) | Θερμοκρασία (C) |
 |------------------------------+-------------------+-----------------|
-| ΜΣΓ                          |               350 |             250 |
+| ΜΣΓ                          |            199.82 |             250 |
 | Αναβραστήρας Γλυκερόλης      |           1105.44 |             300 |
 | Αναβραστήρας Κυκλοπεντανόνης |           9543.12 |             140 |
+| Αντιδραστήρας Σακχαροποίησης |            393.63 |              60 |
 
-Από τα 3 ρεύματα αυτά, είναι εύκολο να παρατηρηθούν τα δύο επίπεδα που χρειάζονται. Το πρώτο πρέπει να είναι στους 300 \( ^oC \) τουλάχιστον με θερμική δυνατότητα σχεδόν 1500 MJ/hr ενώ το δεύτερο πρέπει να είναι στους 140 \( ^oC \) τουλάχιστον με θερμική δυνατότητα 9543.12 MJ/hr. Πιθανόν να τοποθετηθεί και λίγο παραπάνω ώστε να υπάρχει περιθώριο για την αναγέννηση. Εκτός αν η αναγέννηση αποτελέσει την 2η βαθμίδα και αυτό είναι η τρίτη.
+Από τα 4 ρεύματα αυτά, είναι εύκολο να παρατηρηθούν τα δύο επίπεδα που χρειάζονται. Το πρώτο πρέπει να είναι στους 300 \( ^oC \) τουλάχιστον με θερμική δυνατότητα περίπου 1300 MJ/hr ενώ το δεύτερο πρέπει να είναι στους 140 \( ^oC \) τουλάχιστον με θερμική δυνατότητα 10000 MJ/hr περίπου. 
+
+ Το 1ο επίπεδο είναι ο ατμός υψηλής πίεσης ο οποίος παράγεται από τα καυσαέρια. Για να παράγει ικανοποιητικά ποσά ενέργειας το κύκλο, πρέπει να είναι τουλάχιστον στα 100 bar, ώστε η εκτόνωση του να δώσει πολύ έργο. Ο ατμός που χρησιμοποιείται είναι στα 150 bar και 700 \( ^oC \). Η πρώτη βαθμίδα εκτόνωσης τοποθετείται στα 30 bar όπου ο ατμός έχει θερμοκρασία 443 \( ^oC \) και η θερμοκρασία του μειώνεται στους 364 \( ^oC \). Η θερμοκρασία είναι πολύ υψηλή διότι ξεκινάμε από ατμό πολύ μεγάλης θερμοκρασίας και πίεσης και η εκτόνωση αυτή οδηγεί σε αυτήν την θερμοκρασία. Όμως, αυτό είναι καλό επειδή σημαίνει ότι και μετά την θέρμανση που πρέπει να κάνει, είναι ακόμη υπέρθερμος με σχετικά μεγάλο βαθμό υπερθέρμανσης άρα μπορεί να τοποθετηθεί ασφαλώς σε δεύτερο στρόβιλο όπου θα εκτονωθεί μέχρι τα 4 bar και θερμοκρασία 151 \( ^oC \) ώστε να καλύψει τις ανάγκες που χρειάζονται σε χαμηλή θερμοκρασία. Η ποσότητα που χρησιμοποιήθηκε επαρκεί ώστε ο ατμός να φτάσει σε μίγμα με την υγρή φάση ποιότητας 0.5 περίπου. Θα μπορούσαμε να τραβήξουμε μικρότερη ποσότητα εξαρχής, αλλά κινδυνεύουμε να δημιουργηθεί υγρή φάση μέσα στον στρόβιλο (καθώς το νερό είναι κοντά στον κορεσμό του ως έχει) και επίσης, δυσχεραίνουμε την αναθέρμανση η οποία γίνεται με τον υπόλοιπο ατμό στα 30 bar. Η τέταρτη βαθμίδα είναι το νερό χαμηλής πίεσης που τροφοδοτούμε, το οποίο έχει πίεση 0.1 bar.
