Adding files for the 6th exam

--- a/energy_integration.org
+++ b/energy_integration.org
@@ -283,12 +283,8 @@
 #+ATTR_ORG: :width 700px
 [[file:Diagrams/grand_composite_curve_4.png]]
 
-Βέβαια, παρότι το μεγάλο σύνθετο γράφημα αυτό είναι μία πολύ καλή εικόνα (χαμηλές απαιτήσεις και σε θερμή αλλά και σε ψυχρή παροχή), έχει δημιουργηθεί μία πάρα πολύ μεγάλη ενεργειακή τσέπη. Παρόλο που θα μπορούσαμε να την αφήσουμε, αξίζει να εξεταστεί και το ενδεχόμενο της ολοκλήρωσης ενός μικρού κύκλου Rankine στο σημείο αυτό το οποίο θα παράγει υπέρθερμο ατμό με ένα ποσό της διαθέσιμης θερμότητας της τσέπης, θα τον εκτονώνει σε στρόβιλο παράγοντας ηλεκτρική ενέργεια και με τον ατμό χαμηλότερης πίεσης θα εναλάσσει με τα κάτω ρεύματα της τσέπης.
-
-Λόγω της μορφής του γραφήματος, η επιλογή των επιπέδων ατμού που θα μεγιστοποιήσουν την ηλεκτροπαραγωγή είναι γενικά ένα θέμα βελτιστοποίησης. Αυτό συμβαίνει επειδή αν εκμεταλλευτούμε πολύ από την διαθέσιμη θερμότητα, δηλαδή παράξουμε μεγάλη ποσότητα ατμού, η μείωση της θερμοκρασίας του ατμού που θα μπορούμε να κάνουμε θα είναι μικρή μέχρι να συναντήσουμε το άλλο άκρο της τσέπης. Αντίθετα, αν παράξουμε μικρή ποσότητα ατμού, θα έχει μεγάλο περιθώριο εκτόνωσης.
-
 ** Απαίτηση σε θερμές παροχές
-Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των συμπιεστών, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 συμπιεστές στο κύκλο, άρα πάνω από 4 επίπεδα ατμού.
+Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των στροβίλων, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 στρόβιλους στο κύκλο, άρα πάνω από 4 επίπεδα ατμού.
 
 #+CAPTION: Απαιτούμενα επίπεδα ατμού
 | Απαίτηση                     | Θερμότητα (MJ/hr) | Θερμοκρασία (C) |
